log
Thu 24 Aug 2023 04:20:29 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:17: error: expected expression before ‘List’
   32 |   List lista= (*List)
      |                 ^~~~
list.c:33:3: error: expected ‘,’ or ‘;’ before ‘malloc’
   33 |   malloc(sizeof(List));
      |   ^~~~~~
list.c:34:8: error: invalid type argument of ‘->’ (have ‘List’ {aka ‘struct List’})
   34 |   lista->head=NULL;
      |        ^~
list.c:35:8: error: invalid type argument of ‘->’ (have ‘List’ {aka ‘struct List’})
   35 |   lista->tail=NULL;
      |        ^~
list.c:36:8: error: invalid type argument of ‘->’ (have ‘List’ {aka ‘struct List’})
   36 |   lista->current=NULL;
      |        ^~
list.c:37:13: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘List *’ {aka ‘struct List *’} was expected
   37 |      return lista;
      |             ^~~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0437c9c
Thu 24 Aug 2023 04:21:33 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:18: error: expected expression before ‘List’
   32 |   List* lista= (*List)malloc(sizeof(List));
      |                  ^~~~
list.c:32:23: error: expected ‘,’ or ‘;’ before ‘malloc’
   32 |   List* lista= (*List)malloc(sizeof(List));
      |                       ^~~~~~
Compilation failed
d1cb5b4
Thu 24 Aug 2023 04:22:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
aabd3e5
Thu 24 Aug 2023 04:30:53 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:6: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   40 |   if(lista->head==NULL)
      |      ^~~~~
      |      list
list.c:40:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9ef8384
Thu 24 Aug 2023 04:36:10 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:6: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   40 |   if(lista->head==NULL)
      |      ^~~~~
      |      list
list.c:40:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b1bdb7c
Thu 24 Aug 2023 04:39:39 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
e2e7b27
Thu 24 Aug 2023 04:48:42 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
eb930fc
Thu 24 Aug 2023 04:50:01 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d39b7a1
